--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Tima.xcodeproj/xcshareddata/
-/Tima.xcodeproj/xcuserdata/kuniyoshi.xcuserdatad/xcdebugger/
+/Tima.xcodeproj/xcuserdata/
+/Tima.xcodeproj/project.xcworkspace/xcuserdata/
